# LensPause

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  index.html
.github/workflows/: docker.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: domain.rs  main.rs
backend/src/application/: dto.rs  use_cases.rs
backend/src/application/use_cases/: fetch_new_photos.rs  get_today_photo.rs  list_photo_pool.rs
backend/src/domain/: daily_photo.rs  errors.rs  exif_info.rs  focus_params.rs  metadata_templates.rs  photo_id.rs  photo_source.rs  repository.rs  services.rs
backend/src/domain/services/: photo_curator.rs  photo_selector.rs
backend/src/infrastructure/: http.rs
backend/src/infrastructure/db/: sqlite.rs
backend/src/infrastructure/http/: unsplash_client.rs
backend/src/presentation/: error.rs  routes.rs
backend/src/presentation/routes/: health.rs  photos.rs
css/: style.css
frontend/: nginx.conf
js/: app.js  i18n.js  photos.js
